crates/formatter/tests/snapshots/snapshots__coder__migrations__000275_check_tags.down.snap
---
source: crates/formatter/tests/snapshots.rs
assertion_line: 30
expression: formatted
---
drop function IF exists provisioner_tagset_contains(tagset, tagset);

drop domain if exists tagset;
