crates/formatter/tests/snapshots/snapshots__coder__migrations__000279_workspace_create_notification.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
delete from notification_templates
where id = '281fdf73-c6d6-4cbb-8ff5-888baf8a2fff';
