crates/formatter/tests/snapshots/snapshots__coder__migrations__000282_workspace_app_add_open_in.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create type workspace_app_open_in as enum (
	'tab',
	'window',
	'slim-window'
);

alter table workspace_apps
	add column open_in workspace_app_open_in not null
		default 'slim-window'::workspace_app_open_in;
