crates/formatter/tests/snapshots/snapshots__coder__migrations__000284_allow_disabling_notification_templates_by_default.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table notification_templates drop column enabled_by_default;

create or replace function inhibit_enqueue_if_disabled()
returns trigger
language plpgsql
as $$
begin
	-- Fail the insertion if the user has disabled this notification.
	if exists (
		select 1
		from notification_preferences
		where
			disabled = true
			and user_id = NEW.user_id
			and notification_template_id = NEW.notification_template_id
	) then
		raise exception 'cannot enqueue message: user has disabled this notification';
	end if;

	return NEW;
end;
$$;
