crates/formatter/tests/snapshots/snapshots__coder__migrations__000284_allow_disabling_notification_templates_by_default.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table notification_templates
	add column enabled_by_default boolean default true not null;

create or replace function inhibit_enqueue_if_disabled()
returns trigger
language plpgsql
as $$
begin
	-- Fail the insertion if one of the following:
	--  * the user has disabled this notification.
	--  * the notification template is disabled by default and hasn't
	--    been explicitly enabled by the user.
	if exists (
		select 1
		from notification_templates
			left join notification_preferences
				on notification_preferences.notification_template_id
				= notification_templates.id
				and notification_preferences.user_id = NEW.user_id
		where
			notification_templates.id = NEW.notification_template_id
			and (
				-- Case 1: The user has explicitly disabled this template
				notification_preferences.disabled
				= true
				or
				-- Case 2: The template is disabled by default AND the user hasn't enabled it
				(
					notification_templates.enabled_by_default = false
					and notification_preferences.notification_template_id is null
				)
			)
	) then
		raise exception 'cannot enqueue message: notification is not enabled';
	end if;

	return NEW;
end;
$$;
