crates/formatter/tests/snapshots/snapshots__coder__migrations__000285_disable_workspace_created_and_manually_updated_notifications_by_default.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Enable 'workspace created' notification by default
update notification_templates
set enabled_by_default = true
where id = '281fdf73-c6d6-4cbb-8ff5-888baf8a2fff';

-- Enable 'workspace manually updated' notification by default
update notification_templates
set enabled_by_default = true
where id = 'd089fe7b-d5c5-4c0c-aaf5-689859f7d392';
